[package]
name = "taiko-game"
description = "A taiko game written in Rust."
version = "0.0.3"
license = "MIT"
authors = ["JacobLinCool <jacob@csie.cool>"]
homepage = "https://github.com/JacobLinCool/rhythm-rs"
repository = "https://github.com/JacobLinCool/rhythm-rs"
edition = "2021"
build = "build.rs"

[[bin]]
name = "taiko"
path = "src/main.rs"

[dependencies]
rhythm-core = { path = "../rhythm-core", version = "0.2.0" }
tja = { path = "../tja", version = "0.2.1" }
taiko-core = { path = "../taiko-core", version = "0.0.1" }
better-panic = "0.3.0"
clap = { version = "4.5.4", features = ["derive", "cargo", "wrap_help", "unicode", "string", "unstable-styles"] }
color-eyre = "0.6.3"
config = "0.14.0"
crossterm = { version = "0.27.0", features = ["serde", "event-stream"] }
derive_deref = "1.1.1"
directories = "5.0.1"
futures = "0.3.30"
human-panic = "2.0.0"
lazy_static = "1.4.0"
log = "0.4.21"
pretty_assertions = "1.4.0"
ratatui = { version = "0.26.0", features = ["serde", "macros"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
signal-hook = "0.3.17"
strip-ansi-escapes = "0.2.0"
strum = { version = "0.26.1", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = "0.7.9"
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "serde"] }
anyhow = "1.0.82"
encoding_rs = "0.8.34"
kira = "0.8.7"
glob = "0.3.1"

[build-dependencies]
vergen = { version = "8.3.1", features = [ "build", "git", "gitoxide", "cargo" ]}
