[package]
name = "taiko-streaming"
description = ""
version = "0.0.0"
license = "MIT"
authors = ["JacobLinCool <jacob@csie.cool>"]
homepage = "https://github.com/JacobLinCool/rhythm-rs"
repository = "https://github.com/JacobLinCool/rhythm-rs"
edition = "2021"

[lib]
name = "taiko_streaming"

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = "0.7.9"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
bore-cli = "0.5.1"
warp = "0.3.7"
webrtc = "0.11.0"
reqwest = { version = "0.12.7", features = ["rustls-tls", "json"] }
anyhow = "1.0.82"
futures = "0.3.30"
async-trait = "0.1.82"
tokio-tungstenite = "0.23.1"
rmp-serde = "1.3.0"
url = "2.5.2"
rand = "0.8.5"
uuid = { version = "1.10.0", features = ["v4"] }
crossterm = { version = "0.28.1", features = ["serde"] }
taiko-core = { version = "0.0.2", path = "../taiko-core" }
tja = { version = "0.2.3", path = "../tja" }
