[package]
name = "tja"
description = "TJA file parser."
version = "0.2.3"
license = "MIT"
authors = ["JacobLinCool <jacob@csie.cool>"]
homepage = "https://github.com/JacobLinCool/rhythm-rs"
repository = "https://github.com/JacobLinCool/rhythm-rs"
edition = "2021"

[lib]
name = "tja"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[example]]
name = "ryan"
path = "examples/ryan.rs"

[features]
default = ["serde", "encoding"]
serde = ["dep:serde", "dep:serde_json"]
encoding = ["dep:encoding_rs"]

[dependencies]
encoding_rs = { version = "0.8.34", optional = true }
rhythm-core = { path = "../rhythm-core", version = "0.2.0" }
serde = { version = "1.0.197", features = ["derive"], optional = true }
serde_json = { version = "1.0.114", optional = true }
